<resources>
    <string name="app_name">whosturn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_status_fmt">user email: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">user token: %s</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="loading">Loading...</string>

</resources>
